# secrets-keeper

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  gen_secret_key.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: logger.py  services.py  settings.py
app/api/: router.py
app/db/: connection.py  models.py  schemas.py
tests/: test_api.py  test_services.py
